[package]
name = "e-disclosure-events-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.16.0"
sqlx = { version =  "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
