[package]
name = "e-disclosure-events-bot"
version = "0.1.0"
edition = "2021"
authors = [ "Vladimir Glukhov <glukhov.root@gmail.com>" ]
description = "Telegram bot, parser events from e-disclosure"
repository = "https://github.com/root-glukhov/e-disclosure-events-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy_macro = "0.15.1"
tokio = { version = "1", features = ["full"] }
once_cell = "1.16.0"
sqlx = { version =  "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
reqwest = { version = "0.11.12", features = ["cookies"] }
scraper = "0.13.0"
regex = "1"
chrono = "0.4"